Update personal description

--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
   <title>Erin Morelli | Software Engineer</title>
 
-  <meta name="description" content="Erin Morelli is a software engineer who is passionate about crafting user-centric experiences that blend functionality with a touch of creativity.">
+  <meta name="description" content="Erin Morelli is a software engineer who loves clean design, thoughtful UX, and building things that make life easier.">
   <meta name="image" content="https://erin.dev/img/photo.webp">
 
   <meta property="og:title" content="Erin Morelli | Software Engineer">
-  <meta property="og:description" content="Erin Morelli is a software engineer who is passionate about crafting user-centric experiences that blend functionality with a touch of creativity.">
+  <meta property="og:description" content="Erin Morelli is a software engineer who loves clean design, thoughtful UX, and building things that make life easier.">
   <meta property="og:image" content="https://erin.dev/img/photo.webp">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://erin.dev">
